--- a/wp-content/themes/FoundationPress/assets/scss/custom/_page-about.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/custom/_page-about.scss
@@ -5,8 +5,8 @@
 		background-color: $dark-bg;
 		@if ($debug) {background-color:red;}
 		@include breakpoint(small) {  @include grid-column(12); }
-		@include breakpoint(medium) {  @include grid-column(12); }
-		@include breakpoint(large) {  @include grid-column(5); }
+		@include breakpoint(medium) {  @include grid-column(12);@include grid-column-unposition; }
+		@include breakpoint(large) {  @include grid-column(5); @include grid-column-position(0); }
 		.about-description{		
 			@include grid-row();
 
@@ -27,8 +27,8 @@
 	.team-members-container{
 		@if ($debug) {background-color:blue;}
 		@include breakpoint(small) {  @include grid-column(12); }
-		@include breakpoint(medium) {  @include grid-column(12); }
-		@include breakpoint(large) {  @include grid-column(7); }
+		@include breakpoint(medium) {  @include grid-column(12);;@include grid-column-unposition;  }
+		@include breakpoint(large) {  @include grid-column(7); @include grid-column-unposition;}
 		color: $light-body-text;
 		.team-members{
 			text-align:left;
